[package]
name = "kv"
version = "0.1.1"
edition = "2024"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }

[dev-dependencies]
criterion = "0.5.1"
rand = { version = "0.10.1", features = ["chacha"] }

[[bench]]
name = "resp"
harness = false

[[bench]]
name = "storage"
harness = false

[[bench]]
name = "list"
harness = false
